# SlicerSegmentComparison

./: CMakeLists.txt  LICENSE  README.md
BLD/: BLD.py  CMakeLists.txt
BLD/Resources/UI/: BLD.ui
STAPLE/: CMakeLists.txt  STAPLE.py
STAPLE/Resources/UI/: STAPLE.ui
